@@ -1,0 +1,14 @@
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+ <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+   <head>
+     <title>Frame 1</title>
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+   </head>
+   <body>
+     <h1>Frame 3</h1>
+     <p>Nam accumsan. Donec nisi pede, interdum eget, ultrices ac, vulputate vitae, nunc. Nulla lorem. Duis cursus pharetra dolor. Nulla accumsan hendrerit leo. Vivamus commodo. Nullam dignissim adipiscing est. Aliquam vitae orci in risus lobortis luctus. Ut luctus fermentum ligula. Nullam ipsum. Suspendisse sit amet nisi.</p>
+     <input id=alert_button type=button onclick="alert('I am an alert')" value=Alert>
+     <input id=confirm_button type=button onclick="this.value = confirm('set the value')" value=Confirm>
+     <input id=prompt_button type=button onclick='this.value = prompt("enter your name", "John Doe")' value=Prompt>
+   </body>
+ </html>
