@@ -4,8 +4,9 @@
         <title>Frames</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     </head>
-    <frameset cols="50%, 50%">
-        <frame src="frame_1.html" id="frame_1" name="frame1" class="half" />
-        <frame src="frame_2.html" id="frame_2" name="frame2" class="half" />
+    <frameset cols="40%, 40%, 20%">
+        <frame src="frame_1.html" id="frame_1" name="frame1" />
+        <frame src="frame_2.html" id="frame_2" name="frame2" />
+        <frame src="frame_3.html" id="frame_3" name="frame3" />
     </frameset>
 </html>
